About page added

--- a/secondview/app/webroot/css/styles.css
+++ b/secondview/app/webroot/css/styles.css
@@ -174,3 +174,15 @@ body {
 
 .carousel .item > img { display: inline-block; }
 
+.terms {
+  margin-top: 20px;
+  margin-bottom: 50px;
+  padding: 20px 40px 40px 40px;
+  color: rgb(170,170,170);
+  border: 1px solid;
+  border-radius: 5px;
+  border-color: rgb(170,170,170);
+}
+
+
+
